--- a/sm4/assets/css/style.css
+++ b/sm4/assets/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 :root {
     --main-font: "Roboto Condensed", sans-serif;
     --main-yellow: #E2C437;
@@ -38,6 +37,7 @@ main {
 }
 
 
+
 .modal-wrapper{
     display: flex;
     flex-wrap: wrap;
@@ -64,58 +64,88 @@ main {
     
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
-header {
-    margin: 0 200px;
+:root {
+    --main-font: "Roboto Condensed", sans-serif;
+    --main-color: #97caef;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+    font-family: var(--main-font);
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+
+
+header{
+    display: flex;
+    justify-content: center;
 }
 
 .header-wrapper{
-    padding: 30px;
-    align-items: center;
+    margin: 48px;
+    gap: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
-.header-logo {
-    width: 100%;
-    height: 100%;
+.header-logo{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
 }
+
+.header-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+
 
 
 .dropdown{
     position: relative;
-    display: inline-block;
     cursor: pointer;
 }
 
 .dropbtn {
-    background-color: var(--main-white);
     padding: 16px;
     font-size: 16px;
     border: none;
+    cursor: pointer;
+    background-color: transparent;
 }
 
 .dropdown-content {
+    top: 45px;
+
     display: none;
     position: absolute;
-    top: 50px;
-    background-color: var(--main-white);
-    min-width: 80px;
 }
 
 .dropdown-content a {
-    background-color: var(--main-white);
-    padding: 12px 12px;
+    padding: 12px 24px;
+    border-radius: 4px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #FFC700;}
-
+.dropdown-content a:hover {background-color: var(--main-color);}
 .dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #FFC700}
+.dropbtn:hover {text-decoration: underline;}
 
 
 
