--- a/sm5/assets/css/style.css
+++ b/sm5/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Sono:wght@200..800&display=swap');
 
 :root {
@@ -29,8 +30,10 @@ button {
       text-wrap: nowrap;
 }
 
-body{
-    transition: all 0.3s ease-in-out;
+body {
+    background-color: var(--main-white);
+    font-family: var(--main-font);
+    transition: all 0.3ms ease-in-out;
 }
 
 .container{
@@ -64,20 +67,6 @@ body{
     gap: 20px;
 }
 
-
-
-.button {
-    padding: 12px;
-    margin: 12px;
-    transition: all ease-in-out 0.3s;
-}
-
-.button:hover {
-    background-color: var(--main-color);
-}
-
-
-
 .dropdown{
     position: relative;
     cursor: pointer;
@@ -109,47 +98,5 @@ body{
 
 .dropdown-content a:hover {background-color: var(--main-color);}
 .dropdown:hover .dropdown-content {display: block;}
-.dropbtn:hover {text-decoration: underline;}
 
-
-
-.download-buttons-wrapper {
-    padding: 24px;
-    display: flex;
-    gap: 24px;
-}
-
-
-
-.links-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 60px;
-    gap: 2%;
-}
-
-.sm-wrapper{
-    display: flex;
-    flex-direction: column;
-    gap: 2%;
-}
-
-.hidden{
-    display: none;
-}
-
-
-
-.link{
-    padding: 4px;
-    margin: 8px;
-    border-radius: 10px;
-    font-size: 20px;
-    transition: all ease-in-out 0.3s;
-}
-
-.link:hover{
-    background-color:var(--main-color);
-}
 
